[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/mainfont_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/themes/button_round.tres" type="Theme" id=2]
[ext_resource path="res://files/scenes/Credits.gd" type="Script" id=3]
[ext_resource path="res://assets/images/bg/cave.png" type="Texture" id=4]
[ext_resource path="res://assets/images/sprite/arron.png" type="Texture" id=5]

[node name="credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="bg_1" type="TextureRect" parent="ColorRect"]
margin_left = -136.0
margin_top = -152.0
margin_right = 2071.0
margin_bottom = 1090.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="bg_2" type="TextureRect" parent="ColorRect"]
margin_right = 2207.0
margin_bottom = 1242.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="chars" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="char_1" type="TextureRect" parent="chars"]
margin_left = 72.0
margin_right = 840.0
margin_bottom = 1080.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="char_2" type="TextureRect" parent="chars"]
margin_left = 1120.0
margin_right = 1888.0
margin_bottom = 1080.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="Text" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -402.0
margin_top = 560.0
margin_right = 402.0
margin_bottom = 660.0
rect_min_size = Vector2( 0, 100 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 1
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
fit_content_height = true

[node name="close" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -335.0
margin_top = -98.0
margin_right = -48.0
margin_bottom = -40.0
grow_horizontal = 2
theme = ExtResource( 2 )
text = "CREDITS_BUTTON"
